# Muza

./: .gitignore  CMakeLists.txt  test.cpp
inc/muza/: audio.hpp  buffer.hpp  constants.hpp  equalTempered.hpp  fftTransforms.hpp  fftWindows.hpp  frameRate.hpp  globals.hpp  math.hpp  midi.hpp  midiMessage.hpp  scale.hpp  session.hpp  tsPop.hpp  tsPush.hpp  tsQueue.hpp  tsbool.hpp  tsqueue.hpp  types.hpp  waveForms.hpp
inc/muza/messages/: exitMessage.hpp  message.hpp  noteMessage.hpp  noteOffMessage.hpp  noteOnMessage.hpp  pedalMessage.hpp  pedalOffMessage.hpp  pedalOnMessage.hpp
inc/muza/synths/: acetzaSy.hpp  acetzasy.hpp
inc/muza/synths/acetzaSy/: keyState.hpp
src/: main.cpp
src/muza/audio.hpp/: main.cpp
src/muza/buffer.hpp/: main.cpp
src/muza/equalTempered.hpp/: main.cpp
src/muza/fftTransforms.hpp/: main.cpp
src/muza/fftWindows.hpp/: main.cpp
src/muza/frameRate.hpp/: main.cpp
src/muza/globals.hpp/: main.cpp
src/muza/math.hpp/: main.cpp
src/muza/messages/exitMessage.hpp/: main.cpp
src/muza/messages/message.hpp/: main.cpp
src/muza/messages/noteMessage.hpp/: main.cpp
src/muza/messages/noteOffMessage.hpp/: main.cpp
src/muza/messages/noteOnMessage.hpp/: main.cpp
src/muza/messages/pedalMessage.hpp/: main.cpp
src/muza/messages/pedalOffMessage.hpp/: main.cpp
src/muza/messages/pedalOnMessage.hpp/: main.cpp
src/muza/midi.hpp/: main.cpp
src/muza/scale.hpp/: main.cpp
src/muza/session.hpp/: main.cpp
src/muza/synths/acetzaSy.hpp/: main.cpp
src/muza/tsbool.hpp/: main.cpp
src/muza/waveForms.hpp/: main.cpp
(+1 files in other folders)
